# weather_station

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  platformio.ini
lib/bme280/: bme280.cpp  bme280.hpp
lib/rain_fall/: rain_sensor.cpp  rain_sensor.hpp
lib/sensor_base/: sensor_base.cpp  sensor_base.hpp
lib/sensor_supervisor/: sensor_supervisor.cpp  sensor_supervisor.hpp
lib/wind_direction/: wind_direction.cpp  wind_direction.hpp
lib/wind_speed/: wind_speed.cpp  wind_speed.hpp
main/: CMakeLists.txt  weather_station.cpp
main/interface_drivers/: cppspi.cpp
main/interface_drivers.cpp/: cppspi.cpp  cppspi.hpp
main/sensor_drivers/: CMakeLists.txt  bme280.cpp  bme280.hpp  bme280_common.hpp  bme280_driver.cpp  sensor_base.cpp  sensor_base.hpp  sensor_defines.hpp  sensor_supervisor.cpp  sensor_supervisor.hpp
main/sensor_drivers/bme280/: CMakeLists.txt  bme280_common.cpp  bme280_driver.cpp  bme280_driver.hpp
main/sensor_drivers/sensor_helpers/: sensor_base.cpp  sensor_base.hpp  sensor_defines.cpp  sensor_defines.hpp  sensor_supervisor.cpp
scripts/: build.sh  setup.sh
src/: main.cpp
test/test_bme280/: test_bme280.cpp
test/test_desktop/: test_wind_speed.cpp
