idf_component_register(SRCS 
"weather_station.cpp"
"sensor_drivers/bme280.cpp"
"sensor_drivers/bme280/bme280_driver.cpp"
"sensor_drivers/bme280/bme280_common.cpp"
"sensor_drivers/sensor_helpers/sensor_base.cpp"
"sensor_drivers/sensor_helpers/sensor_defines.cpp"
"sensor_drivers/sensor_helpers/sensor_supervisor.cpp"
"interface_drivers/cppspi.cpp"
INCLUDE_DIRS 
"."
"sensor_drivers"
"sensor_drivers/bme280"
"sensor_drivers/sensor_helpers"
"interface_drivers")
